--- a/ui-frontend/packages/catalog-ui-search/package.json
+++ b/ui-frontend/packages/catalog-ui-search/package.json
@@ -14,7 +14,8 @@
     "test": "ace test",
     "start:test": "ace start --env=test",
     "storybook": "ace storybook",
-    "build": "node --max_old_space_size=16384 ./node_modules/@connexta/ace/bin.js bundle --tsTranspileOnly true",
+    "build": "node --max_old_space_size=16384 ./node_modules/@connexta/ace/bin.js bundle",
+    "build:transpile": "node --max_old_space_size=16384 ./node_modules/@connexta/ace/bin.js bundle --tsTranspileOnly true",
     "postbuild": "ace package",
     "m2": "yarn install:m2",
     "install:m2": "ace clean && ace bundle --tsTranspileOnly true && ace package && ace install"
