--- a/ui-frontend/package.json
+++ b/ui-frontend/package.json
@@ -6,7 +6,8 @@
     "format": "ace format",
     "posttest": "ace pom",
     "prebuild": "lerna run clean",
-    "build": "yarn format && lerna run build -- --tsTranspileOnly true",
+    "build": "yarn format && lerna run build",
+    "build:transpile": "yarn format && lerna run build -- --tsTranspileOnly true",
     "postbuild": "mkdirp target && ace gen-feature",
     "postinstall": "lerna bootstrap",
     "m2": "yarn install:m2",
