--- a/ui-frontend/packages/admin/package.json
+++ b/ui-frontend/packages/admin/package.json
@@ -33,7 +33,8 @@
   },
   "scripts": {
     "start": "ace start",
-    "build": "node --max_old_space_size=16384 ./node_modules/@connexta/ace/bin.js bundle --tsTranspileOnly true",
+    "build": "node --max_old_space_size=16384 ./node_modules/@connexta/ace/bin.js bundle",
+    "build:transpile": "node --max_old_space_size=16384 ./node_modules/@connexta/ace/bin.js bundle --tsTranspileOnly true",
     "postbuild": "ace package",
     "m2": "yarn install:m2"
   },
